Refactor INDEX.html structure and content

--- a/INDEX.html
+++ b/INDEX.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX</title>
+</head>
+<body>
     <!--header-->
+
     <h1>Welcome to  Laundry Wallah / Laundry Mart</h1>
    <!-- Description -->
     <p>Welcome to Laundry Wallas Laundry Mart, your one-stop solution for all your laundry needs. Our dedicated team ensures top-notch service, providing a hassle-free and efficient lamdry experience. With a focus on quality and customer satisfaction, we take care of your garments as if they were our own.
-</p>
-<p>
-   <img src="images/105854358.jpg" alt="Laundry Image" hight="300" width="300">
-</p>
+ </p>
+    <img src="105854358.png" alt="laundry washing machine" width="150" height="150" >
     <!-- Services Offered -->
    <h2><strong>Services</strong></h2>
     <ul>
@@ -24,12 +25,12 @@
         <li>and more....</li>
     </ul>
         <p><strong>price</strong></p>
-        <table border="1">
+        <table boder="1">
         <caption>Laundry Services Price List</caption>
         <thead>
             <tr>
                 <th>Service</th>
-                <th>Price (per kg)</th>
+                <th>Price </th>
             </tr>
         </thead>
         <tbody>
@@ -42,7 +43,7 @@
                 <td>₹5.00</td>
             </tr>
         </tbody>
-    </head> </table>
+     </table>
        <p><strong>Book Now</strong></p>
  <form action="/submit_booking" method="post">
     <label for="name">Name:</label><br>
@@ -58,8 +59,6 @@
 
 
 
-
-<body>
   
 </body>
 </html>
